cloudformation/template.yml

AWSTemplateFormatVersion: '2010-09-09'

Description: 'Cloud Grad Environment RDS instance for SQL Server with new VPC'

Parameters:
  dbInstanceID:
    Default: 'kindnessKattleDB'
    Description: 'Pretty database instance identifier'
    Type: 'String'
    MinLength: '1'
    MaxLength: '63'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: 'Must begin with a letter and must not end with a hyphen or contain two consecutive hyphens.'

  dbUser:
    Type: 'String'
    Default: 'admin'
    Description: 'Database Master User'
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: 'Must begin with a letter and only contain normal chars'

  dbPassword:
    NoEcho: true
    Type: 'String'
    Default: 'imkrsnna'
    Description: 'Database Master User Password'
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '.*'
    ConstraintDescription: 'Password Minimum 8, Max of 41'

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsHostnames: true
      EnableDnsSupport: true

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'VPC'
      AvailabilityZone: 'eu-west-1a'
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: true

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'VPC'
      AvailabilityZone: 'eu-west-1b'
      CidrBlock: '10.0.2.0/24'
      MapPublicIpOnLaunch: true

  IGW:
    Type: 'AWS::EC2::InternetGateway'

  GatewayAttatchment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'IGW'

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref 'VPC'

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: 'GatewayAttatchment'
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'IGW'

  PublicSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicRouteTable'

  PublicSubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref 'PublicSubnet2'
      RouteTableId: !Ref 'PublicRouteTable'

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow SQL Server from anywhere'
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 1433  # Default port for SQL Server
          ToPort: 1433
          CidrIp: '0.0.0.0/0'
      VpcId: !Ref 'VPC'

  DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'Public subnet group for RDS DB created by CloudFormation'
      DBSubnetGroupName: 'PublicSubnets'
      SubnetIds:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'

  dbCloud:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      DBInstanceIdentifier: !Ref 'dbInstanceID'
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
      VPCSecurityGroups:
        - !GetAtt 'SecurityGroup.GroupId'
      StorageType: 'gp3'
      AllocatedStorage: '20'
      MaxAllocatedStorage: '50'
      DBInstanceClass: 'db.t3.small'
      Engine: 'sqlserver-ex'
      MasterUsername: !Ref 'dbUser'
      MasterUserPassword: { "Ref": "dbPassword" }
      MultiAZ: false
      PubliclyAccessible: true
    DeletionPolicy: 'Snapshot'
    DependsOn: 'SecurityGroup'
